<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7DE2EF"
    tools:context=".view.loginAndregister.signInActivity">

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="693dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/verifyPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/verifyPassword"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/birthdateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birthdate"
            android:inputType="date" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbFisioterapeuta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physioterapist"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbOcupacional"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ocupational_therapist"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbLogopeda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/speech_therapist"
                    android:textSize="12sp" />
            </LinearLayout>

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/idProfessionalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/idProfessionalNumber"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D65B85"
            android:onClick="sign_in_user"
            android:text="@string/signIn_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>