<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7DE2EF"
    tools:context=".view.MainMenuActivity">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="704dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/managePatientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D65B85"
            android:onClick="go_to_managePatients"
            android:text="@string/createPatientButton" />

        <Button
            android:id="@+id/patientListButton"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#D65B85"
            android:onClick="go_to_patientsLists"
            android:text="@string/listPatient" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#D65B85"
            android:onClick="go_to_my_profile"
            android:text="@string/manageProfile" />

        <Button
            android:id="@+id/scheduleButton"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#D65B85"
            android:onClick="go_to_calendar"
            android:text="@string/manageCalendar" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#D65B85"
            android:onClick="signOut"
            android:text="@string/signOutButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>