<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/cardview_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtViewNamePatient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:padding="10dp"
                            android:fontFamily="monospace"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/txtViewEmailPatient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/email"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/txtViewPhonePatient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/phone"
                            android:textSize="15sp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/viewPatientButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:text="@string/seeButton" />
        </LinearLayout>

</LinearLayout>