<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7DE2EF"
    tools:context=".view.patient.CreateTreatmentPlanActivity">

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="706dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/lesionTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/lesion"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/injuryTypeTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lesionType" />

                <EditText
                    android:id="@+id/injuryTypeEditTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/injuryConsequencesTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lesionConsequences" />

                <EditText
                    android:id="@+id/injuryConsequencesEditTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/injuryOriginTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lesionOrigin" />

                <EditText
                    android:id="@+id/injuryOriginEditTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/injuryObservationsTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/observations" />

                <EditText
                    android:id="@+id/injuryObservationsEditTxt"
                    android:layout_width="263dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="textMultiLine" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/injurynDateTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lesionDate" />

                <EditText
                    android:id="@+id/injuryDateEditTxt"
                    android:layout_width="246dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="date" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/treatmentPlanTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/treatmentPlan"
            android:textAllCaps="true"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/treatmentTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treatment" />

                <EditText
                    android:id="@+id/treatmentEditTxt"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/treatmentDurationTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treatmentDuration" />

                <EditText
                    android:id="@+id/treatmentDurationEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/treatmentObservationsTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/observations" />

                <EditText
                    android:id="@+id/treatmentObservationsEditTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="textMultiLine" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/treatmentObjectivesTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treatmentObjectives" />

                <EditText
                    android:id="@+id/treatmentObjectivesEditTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/appliedTechniquesTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appliedTechniques" />

                <EditText
                    android:id="@+id/appliedTechniquesEditTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>
        </TableLayout>

            <Button
                android:id="@+id/createTreatmentPlanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D65B85"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:onClick="register_TreatmentPlan_in_database"
                android:text="@string/registerTreatmentPlan" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>